--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=demo
 
-# Swagger OpenAPI config
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.h
 server.port=8081
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate = true
+
+spring.datasource.url=jdbc:postgresql://10.100.1.102:5432/citus
+spring.datasource.username=postgres
+spring.datasource.password=rahasia2024
+spring.jpa.hibernate.ddl-auto=none
